[project]
name = "hadron-simulation-calorimeter"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jiale Cheng", email = "yuttokb@gmail.com" }
]
dependencies = [
    "scikit-learn>=1.6.1",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hadron_simulation_calorimeter"]
